--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/fsbmat-ufv/heckmange
 BugReports: https://github.com/fsbmat-ufv/heckmange/issues
+Depends: 
+    R (>= 2.10)
+LazyData: true
