--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,14 @@ Package: heckmange
 Title: Estimation and Inference for Heckman Selection Models with Cluster-Robust Variance
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    c(
+      person("Barbosa", "Rogério Jerônimo", , "rogerio.barbosa@iesp.uerj.br", role = c("aut", "cre"),
+             comment = c(ORCID = "0000-0002-6796-4547")),
+      person("Bastos", "Fernando de Souza", , "fernando.bastos@ufv.br", role = "aut",
+             comment = c(ORCID = "0000-0003-1503-4599")),
+      person("Prates", "Marcos Oliveira", , "marcosop@est.ufmg.br", role = "aut",
+             comment = c(ORCID = "0000-0001-8077-4898"))
+    )
 Description: The `heckmange` package provides tools for the estimation of Heckman selection models with robust variance-covariance matrices. It includes functions for computing the bread and meat matrices, as well as clustered standard errors for generalized Heckman models. The package also offers cluster-robust inference with sandwich estimators, and tools for handling issues related to eigenvalues in covariance matrices.
 License: GPL-3
 Encoding: UTF-8
@@ -12,5 +18,8 @@ RoxygenNote: 7.3.2
 URL: https://github.com/fsbmat-ufv/heckmange
 BugReports: https://github.com/fsbmat-ufv/heckmange/issues
 Depends: 
-    R (>= 2.10)
+    R (>= 2.10), 
+    maxLik,
+    miscTools,
+    vctrs
 LazyData: true
