--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ S3method(model.matrix,heckmanGE)
 S3method(predict,heckmanGE)
 S3method(print,heckmanGE)
 S3method(residuals,heckmanGE)
-S3method(summary,heckmange)
+S3method(summary,heckmanGE)
 S3method(vcov,heckmanGE)
 export(bread.heckmanGE)
 export(estfun.heckmanGE)
