--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/fsbmat-ufv/heckmanGE
 BugReports: https://github.com/fsbmat-ufv/heckmanGE/issues
+Imports:
+    glm2
 Depends: 
     R (>= 2.10), 
     maxLik,
