--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: heckmanGE
 Title: Estimation and Inference for Heckman Selection Models with Cluster-Robust Variance
-Version: 0.0.0.9000
+Version: 1.0.0
+Date: 2024-10-02
 Authors@R: 
     c(person("Bastos", "Fernando de Souza", , "fernando.bastos@ufv.br", role = c("aut", "cre"),
              comment = c(ORCID = "0000-0003-1503-4599")),
@@ -21,10 +22,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/fsbmat-ufv/heckmanGE
 BugReports: https://github.com/fsbmat-ufv/heckmanGE/issues
-Imports: glm2
-Depends: 
-    R (>= 2.10), 
+Imports: 
+    glm2,
     maxLik,
     miscTools,
-    vctrs,
+    vctrs
+Depends: 
+    R (>= 2.10) 
 LazyData: true
