--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,13 @@ Authors@R:
       person("Prates", "Marcos Oliveira", , "marcosop@est.ufmg.br", role = "aut",
              comment = c(ORCID = "0000-0001-8077-4898"))
     )
-Description: The `heckmanGE` package provides tools for the estimation of Heckman 
-  selection models with robust variance-covariance matrices. It includes functions 
-  for computing the bread and meat matrices, as well as clustered standard errors 
-  for generalized Heckman models. The package also offers cluster-robust inference 
-  with sandwich estimators, and tools for handling issues related to eigenvalues 
-  in covariance matrices.
+Description: Tools for the estimation of Heckman selection models with robust 
+  variance-covariance matrices. It includes functions for computing the bread 
+  and meat matrices, as well as clustered standard errors for generalized Heckman 
+  models, see Fernando de Souza Bastos and Wagner Barreto-Souza and Marc G. Genton 
+  (2022, ISSN: <https://www.jstor.org/stable/27164235>). The package also offers 
+  cluster-robust inference with sandwich estimators, and tools for handling issues 
+  related to eigenvalues in covariance matrices.
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -26,7 +27,6 @@ Imports:
     glm2,
     maxLik,
     miscTools,
-    vctrs
 Depends: 
     R (>= 2.10) 
 LazyData: true
